<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.SettingsFragment">
    <TextView
        android:id="@+id/settingsCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_interface"
        android:textSize="16sp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/settingsDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/transparent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/settingsCat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <LinearLayout
        android:id="@+id/themeSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/settingsDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/themeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_settings"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/textColorPrimary" />
        <TextView
            android:id="@+id/currentTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_theme"
            android:textSize="14sp"
            android:textColor="@color/textColorSecondary"
            android:layout_marginTop="4dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>