<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_padding"
    tools:context=".ui.home.HomeFragment">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/input_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/cardView_marginHorizontal"
        android:layout_marginTop="@dimen/cardView_marginTop"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:cardElevation="@dimen/cardElevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/primary"
        app:strokeWidth="1dp"
        tools:ignore="MissingConstraints">
        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/input_hint"
            android:background="@drawable/rounded_edittext"
            android:gravity="start|top"
            android:hint="@string/input_hint"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:maxHeight="@dimen/editText_maxHeight"
            android:maxLines="6"
            android:minHeight="@dimen/editText_minHeight"
            android:padding="@dimen/editText_padding"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorSecondary"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/word_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/word_count_text_marginTop"
        android:text="@string/word_count_format"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/word_count_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_card" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/detect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:backgroundTint="@color/button"
        android:padding="@dimen/button_padding"
        android:text="@string/button"
        android:textColor="@color/button_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/word_count_text" />
    <TextView
        android:id="@+id/slang_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/slang_count_text_marginTop"
        android:text="@string/slang_count_format"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/slang_count_textSize"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detect_button" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/recycler_view_marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detect_button"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
